--- a/index.css
+++ b/index.css
@@ -9,11 +9,11 @@
 
 @keyframes stretch {
   0% {
-    transform: scale(1);
+    transform: scale(0.9);
   }
 
   100% {
-    transform: scale(1.2);
+    transform: scale(1);
   }
 }
 
@@ -32,7 +32,7 @@
   }
 
   100% {
-    transform: scale(1.4) translateY(-50px);
+    transform: scale(1.1) translateY(-38px);
   }
 }
 
@@ -47,13 +47,13 @@
 
 @keyframes mouse {
   0% {
-    stroke-dashoffset: 135px;
-    stroke-dasharray: 89px;
+    stroke-dashoffset: 223px;
+    stroke-dasharray: 126px;
   }
 
   100% {
-    stroke-dashoffset: 360px;
-    stroke-dasharray: 180px;
+    stroke-dashoffset: 135px;
+    stroke-dasharray: 88px;
   }
 }
 
@@ -77,18 +77,18 @@ body {
   font-family: "PT Sans", sans-serif;
   letter-spacing: 1px;
   border: none;
-  background: #f47d31;
-  color: white;
+  background: #ffdea6;
+  color: #f6914e;
   padding: 30px;
   border-radius: 40px;
   margin: 10px;
-  box-shadow: 0 1px 4px gray;
 }
 
 .btn:hover {
   cursor: pointer;
   border: none;
-  opacity: 0.8;
+  color: white;
+  background: #f6914e;
 }
 
 .button_container {
@@ -111,6 +111,7 @@ body {
   font-size: 48px;
   color: gray;
   background: #fcf5eb;
+  padding-top: 20px;
 }
 
 input {
@@ -178,4 +179,63 @@ input {
   text-align: center;
   background: #fcf5eb;
   padding: 0 0 30px 0;
+}
+
+.cloud_start {
+  animation-name: move;
+  animation-timing-function: ease-in-out;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  transform-origin: center;
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(200px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+.cloud_middle {
+  animation-name: move_middle;
+  animation-timing-function: ease-in-out;
+  animation-duration: 15s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes move_middle {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-200px);
+  }
+}
+
+.cloud_left {
+  animation-name: move_left;
+  animation-timing-function: ease-in-out;
+  animation-duration: 13s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes move_left {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(200px);
+  }
+}
+
+.tittle {
+  color: gray;
+  letter-spacing: 1px;
 }
